--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "2.0.8",
     "@chakra-ui/react": "2.2.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -17,12 +18,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5"
-
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.5",
-    "babel-plugin-styled-components": "^1.12.0"
-  
+    "eslint-config-next": "12.2.5"
   }
 }
