--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@chakra-ui/react": "2.2.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@google/model-viewer": "1.12.1",
+    "@google/model-viewer": "^1.11.1",
     "@react-three/drei": "9.28.2",
     "@react-three/fiber": "8.7.2",
     "framer-motion": "^6",
