--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/model-viewer": "1.12.0",
     "@react-three/drei": "9.28.2",
     "@react-three/fiber": "8.7.2",
+    "@vercel/analytics": "^0.1.5",
     "framer-motion": "^6",
     "next": "12.2.5",
     "next-videos": "1.5.0",
